# Media-Flow

./: .gitignore  BUILD.md  CMakeLists.txt  DESIGN.md  README.md  app_log.txt  firebase-blueprint.json  index.html  log.txt  metadata.json  out.txt  package-lock.json  package.json  patch_dashboard.mjs
.github/workflows/: release.yml
electron/: main.cjs  preload.cjs
qml/: AudienceWindow.qml  Main.qml  OperatorDashboard.qml  Theme.qml  VirtualCameraWindow.qml
qml/components/: BackgroundMusicPanel.qml  BroadcastIcon.qml  DockPanel.qml  MediaSourcePanel.qml  MonitorView.qml  PillButton.qml  SongSelector.qml  SongSelectorPopup.qml  TimerPanel.qml
resources/bridge/: requirements.txt  virtual_camera_bridge.py
resources/python/: README.md
scratch/: check_icon.js  check_obs.py  check_vcam.py  check_vcam_names.py  convert_icon.mjs  diag_broadcast.py  generate_icon.py  list_devices.py  list_windows.py  media_playback_stability_result.json  preload_media_stability.cjs  test_capture_script.py  test_media_playback_stability.cjs  virtual_camera_bridge.py
scripts/: prepare-bridge-python.ps1
src/: App.tsx  BroadcastController.cpp  BroadcastController.h  BroadcastEngine.cpp  BroadcastEngine.h  CameraDeviceModel.cpp  CameraDeviceModel.h  FfmpegUdpBridge.cpp  FfmpegUdpBridge.h  JwLibraryWorker.cpp  JwLibraryWorker.h  MediaAsset.h  MediaExtractor.cpp  MediaExtractor.h  MediaLibraryModel.cpp  MediaLibraryModel.h  MediaLibraryProxyModel.cpp  MediaLibraryProxyModel.h  MediaScanWorker.cpp  MediaScanWorker.h  MediaThumbnailManager.cpp  MediaThumbnailManager.h  MeetingScheduleModel.cpp  MeetingScheduleModel.h  SharedMemoryWriter.cpp  SharedMemoryWriter.h  SongManager.cpp  SongManager.h  SongSearchUtils.cpp  SongSearchUtils.h  StagedMediaProxyModel.cpp  StagedMediaProxyModel.h  TimerController.cpp  TimerController.h  VirtualCameraManager.cpp  VirtualCameraManager.h  index.css  main.cpp  types.ts  vcam_main.cpp  (+2 more)
src/components/: AudienceView.tsx  OperatorDashboard.tsx  SmartMedia.tsx
src/hooks/: useSyncChannel.ts
